--- a/chirp.client/Dockerfile
+++ b/chirp.client/Dockerfile
@@ -1,25 +1,13 @@
 FROM node:20 AS enoch
-
-ENV NODE_ENV=development
-
 WORKDIR /app
-
 COPY package*.json ./
-
-RUN npm install
-
+RUN NODE_ENV=development npm i
 COPY . .
 
 RUN npm run build
 
-FROM nginx:alpine
-
-WORKDIR /usr/share/nginx
-
-RUN rm -rf html
-RUN mkdir html
-
-COPY --from=enoch ./app/dist /usr/share/nginx/html
-COPY client-default.conf /etc/nginx/conf.d/default.conf
- 
-CMD [ "nginx", "-g", "daemon off;" ]
+FROM nginx:1.27.0
+WORKDIR /usr/share/nginx/html
+RUN rm -rf ./*
+COPY --from=builder /app/dist .
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
