--- a/chirp.client/Dockerfile
+++ b/chirp.client/Dockerfile
@@ -11,5 +11,5 @@ RUN npm run build
 FROM nginx:1.27.0
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
-COPY --from=enoch /app/dist . 
+COPY --from=enoch /app .
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
