--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: chirp-client-ingress
+  name: chirp-ingress
   namespace: enoch-final
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -21,7 +21,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: chirp-client
+                name: chirp-client-service
                 port:
                   number: 80
     # - host: api.projectplaylist.duckdns.org # Main domain for the client
