--- a/kubernetes/client-service.yml
+++ b/kubernetes/client-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chirp-client-service
+  name: chirp-client
   namespace: enoch-final
 spec:
   selector:
@@ -10,4 +10,3 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: ClusterIP
