--- a/kubernetes/client-service.yml
+++ b/kubernetes/client-service.yml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chirp-client
+  name: chirp-client-service
   namespace: enoch-final
 spec:
   selector:
     app: chirp-client
   ports:
-  - protocol: TCP
-    port: 3000
-    targetPort: 3000
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
+  type: ClusterIP
