--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: enoch-chirp-service
+                name: chirp-client-service
                 port:
-                  number: 3000
+                  number: 80
