--- a/.github/workflows/ImagePush.yml
+++ b/.github/workflows/ImagePush.yml
@@ -16,20 +16,20 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }} # Set in your repository secrets
-          password: ${{ secrets.DOCKER_PASSWORD }} # Set in your repository secrets
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }} 
 
-      #   - name: Push chirp server
-      #     uses: docker/build-push-action@v2
-      #     with:
-      #       context: ./Chirp.Server # Path to server Dockerfile
-      #       push: true
-      #       tags: ${{ secrets.DOCKER_USERNAME }}/chirpserver:latest , ${{ secrets.DOCKER_USERNAME }}/chirpserver:${{github.run_number}}
+      - name: Push chirp server
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Chirp.Server 
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/chirpserver:latest , ${{ secrets.DOCKER_USERNAME }}/chirpserver:${{github.run_number}}
 
       - name: Push chirps client
         uses: docker/build-push-action@v2
         with:
-          context: ./chirp.client # Path to server Dockerfile
+          context: ./chirp.client 
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/chirpclient:latest , ${{ secrets.DOCKER_USERNAME }}/chirpclient:${{github.run_number}}
 
@@ -37,8 +37,12 @@ jobs:
         run: |
           export PATH=$PATH:~/.nix-profile/bin:/nix/var/nix/profiles/default/bin
 
-          export IMAGE_TAG=${{ github.run_number }}
+          export IMAGE_TAG=${{github.run_number}}
+          export DB_USER_ID=${{secrets.DB_USER_ID}}
+          export DB_PASSWORD=${{secrets.DB_PASSWORD}}
+          export DB_SERVER=${{secrets.DB_SERVER}}
+          export DB_DB=${{secrets.DB_DB}}
 
-          for file in kubernetes/*; do 
-              cat "$file" | envsubst | kubectl apply -f -; 
+          for file in ./kubernetes/*; do 
+            cat $file | envsubst | /home/ethane/.nix-profile/bin/kubectl apply -f -
           done
