--- a/kubernetes/server-service.yml
+++ b/kubernetes/server-service.yml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chirp-client-service
+  name: chirp-server
   namespace: enoch-final
 spec:
   selector:
-    app: chirp-client
+    app: chirp-server
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      name: default
+      port: 8080
+      targetPort: 8080
