--- a/.github/workflows/ImagePush.yml
+++ b/.github/workflows/ImagePush.yml
@@ -16,20 +16,20 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }} 
+          username: ${{ secrets.DOCKER_USERNAME }} # Set in your repository secrets
+          password: ${{ secrets.DOCKER_PASSWORD }} # Set in your repository secrets
 
       - name: Push chirp server
         uses: docker/build-push-action@v2
         with:
-          context: ./Chirp.Server 
+          context: ./Chirp.Server # Path to server Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/chirpserver:latest , ${{ secrets.DOCKER_USERNAME }}/chirpserver:${{github.run_number}}
 
       - name: Push chirps client
         uses: docker/build-push-action@v2
         with:
-          context: ./chirp.client 
+          context: ./chirp.client # Path to server Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/chirpclient:latest , ${{ secrets.DOCKER_USERNAME }}/chirpclient:${{github.run_number}}
 
@@ -43,6 +43,6 @@ jobs:
           export DB_SERVER=${{secrets.DB_SERVER}}
           export DB_DB=${{secrets.DB_DB}}
 
-          for file in ./kubernetes/*; do 
-            cat $file | envsubst | /home/ethane/.nix-profile/bin/kubectl apply -f -
+          for file in kubernetes/*; do 
+              cat "$file" | envsubst | kubectl apply -f -; 
           done
