--- a/kubernetes/client-deployment.yml
+++ b/kubernetes/client-deployment.yml
@@ -17,9 +17,9 @@ spec:
     spec:
       containers:
         - name: chirp-client
-          image: codebras/chirpclient:${IMAGE_TAG}
+          image: ${{ secrets.DOCKER_USERNAME }}/chirpclient:${IMAGE_TAG}
           ports:
             - containerPort: 80
           env:
             - name: VITE_URL
-          value: https://enoch-chirp.duckdns.org/api
+              value: https://enoch-chirp.duckdns.org/api
