--- a/kubernetes/server-deployment.yml
+++ b/kubernetes/server-deployment.yml
@@ -21,9 +21,9 @@ spec:
           ports:
             - containerPort: 8080
           env:
-          - name: ConnectionStrings__chirpdb
-            value: user id= ${DB_USER_ID}; password= ${DB_PASSWORD}; server= ${DB_SERVER}; database= ${DB_DB};
-          - name: allowAll
-            value: "true"
-          - name: clientUrl
-            value: https://enoch-chirp.duckdns.org/
+            - name: ConnectionStrings__chirpdb
+              value: "user id=${DB_USER_ID}; password=${DB_PASSWORD}; server=${DB_SERVER}; database=${DB_DB};"
+            - name: allowAll
+              value: "true"
+            - name: clientUrl
+              value: "https://enoch-chirp.duckdns.org/"
