--- a/chirp.client/Dockerfile
+++ b/chirp.client/Dockerfile
@@ -1,17 +1,18 @@
-# First stage: Build stage
-FROM node:20 AS enoch
+FROM node:20-alpine as builder
 WORKDIR /app
-COPY package*.json ./
-RUN NODE_ENV=development npm install
+COPY package.json . 
+RUN NODE_ENV=development npm i
 COPY . .
 ARG VITE_CERT
-ENV VITE_URL "https://api.enoch-chirp.duckdns.org"
+ENV VITE_URL "https://api.projectplaylist.duckdns.org"
 
 RUN npm run build
 
-# Second stage: Serve with Nginx
 FROM nginx:1.27.0
-WORKDIR /usr/share/nginx/html
-RUN rm -rf ./*
-COPY --from=enoch /app/dist .
+RUN rm -rf /usr/share/nginx/html/*
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+COPY ./defaulf.conf /etc/nginx/conf.d/default.conf
+
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
