default.conf update

--- a/chirp.client/defaulf.conf
+++ b/chirp.client/defaulf.conf
@@ -1,23 +1,21 @@
 server {
-  listen       80;
-  server_name  _;
+    listen       80;
+    server_name  _;
 
-  include mime.types;
-  types {
-    application/javascript  js;
-  }
+    include mime.types;  # This should handle most MIME types automatically
 
-  location /assets {
-    try_files $uri =404;  # Only serve existing files, do not fallback to index.html
-  }
+    location /assets {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
+    }
 
-  location / {
-    root   /usr/share/nginx/html;
-    try_files $uri /index.html; # this is the magic line
-  }
+    location / {
+        root   /usr/share/nginx/html;
+        try_files $uri /index.html; # Fallback to index.html for SPA routing
+    }
 
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 }
