--- a/chirp.client/package.json
+++ b/chirp.client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
+    "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-oidc-context": "^3.2.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
