--- a/chirp.client/package.json
+++ b/chirp.client/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "oidc-client-ts": "^3.1.0",
+    "rc-progress": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.2.0",
