--- a/chirp.client/package.json
+++ b/chirp.client/package.json
@@ -18,6 +18,7 @@
     "rc-progress": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-oidc-context": "^3.2.0",
     "react-router-dom": "^6.28.0"
   },
